# CGISR

./: sodoku_graph_coloring.py
Week1/: sodoku_graph_coloring.py
Week3/vertex_pipeline/: CMakeLists.txt  main.cpp
mini_projects/: dependency_optimizer.py
